--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
     "faker": "^5.5.3",
+    "http-status": "^1.5.0",
     "ip": "^1.1.5",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
@@ -47,11 +48,11 @@
     "shortid": "^2.2.16",
     "supertest": "^6.1.3",
     "swagger-ui-express": "^4.1.6",
-    "tslib": "^2.2.0",
-    "valid-url": "^1.0.9",
-    "yamljs": "^0.3.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.5.2"
+    "tslib": "^2.2.0",
+    "typescript": "^4.5.2",
+    "valid-url": "^1.0.9",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/es6-promise": "^3.3.0",
