--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,12 @@
-APP_NAME=UrlShortner
-PORT=5000
+APP_NAME=UrlShortener
+PORT=3000
 APP_HOST=localhost
 DB_HOST=127.0.0.1
-DB_NAME=shortner
-DB_TEST_NAME=shortner_test
+DB_NAME=shortener
+DB_TEST_NAME=shortener_test
 DB_USERNAME=root
 DB_PASSWORD=
-DB_PORT=3307
+DB_PORT=3306
 DIALECT=mysql
 NODE_ENV=development
 REDIS_URL=redis://127.0.0.1:6379
-IPINFO_TOKEN=
