--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A url shortener app",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=test jest --forceExit --coverage --verbose --colors",
     "start": "npm run build && node dist/index.js",
     "migrate": "sequelize db:migrate",
     "dev": "nodemon",
@@ -35,24 +35,17 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
-    "faker": "^5.5.3",
     "http-status": "^1.5.0",
-    "ip": "^1.1.5",
-    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
-    "node-ipinfo": "^2.1.0",
     "redis": "^3.1.2",
     "sequelize": "^6.6.4",
     "sequelize-cli": "^6.2.0",
     "sequelize-typescript": "^2.1.0",
-    "shortid": "^2.2.16",
     "supertest": "^6.1.3",
-    "swagger-ui-express": "^4.1.6",
     "ts-node": "^9.1.1",
     "tslib": "^2.2.0",
     "typescript": "^4.5.2",
-    "valid-url": "^1.0.9",
-    "yamljs": "^0.3.0"
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "@types/es6-promise": "^3.3.0",
