--- a/package.json
+++ b/package.json
@@ -34,23 +34,20 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.10.1",
     "http-status": "^1.5.0",
     "mysql2": "^2.2.5",
     "redis": "^3.1.2",
     "sequelize": "^6.6.4",
-    "sequelize-cli": "^6.2.0",
+    "sequelize-cli": "^6.3.0",
     "sequelize-typescript": "^2.1.0",
     "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
-    "tslib": "^2.2.0",
-    "typescript": "^4.5.2",
-    "valid-url": "^1.0.9"
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@types/es6-promise": "^3.3.0",
     "@types/express": "^4.17.11",
-    "@types/express-validator": "^3.0.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^15.0.1",
     "@types/sequelize": "^4.28.9",
@@ -62,8 +59,6 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "sequelize-cli": "^6.2.0",
-    "sequelize-cli-typescript": "^3.2.0-c",
     "ts-jest": "^27.0.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.5.2"
