chore: refactor the code from mysql to mongodb

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,9 @@
 APP_NAME=UrlShortener
-PORT=3000
+APP_PORT=4000
 APP_HOST=localhost
-DB_HOST=127.0.0.1
-DB_NAME=shortener
-DB_USERNAME=root
-DB_PASSWORD=
-DB_PORT=3306
-DIALECT=mysql
-NODE_ENV=development
+
+BASE_URL=https://link.ly
+
+DB_URI = mongodb://localhost:27017/url_shortener
+
 REDIS_URL=redis://127.0.0.1:6379
