--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-status": "^1.5.0",
+    "mongoose": "^6.2.10",
     "mysql2": "^2.2.5",
     "redis": "^3.1.2",
     "sequelize": "^6.6.4",
@@ -53,7 +54,7 @@
     "@types/node": "^15.0.1",
     "@types/sequelize": "^4.28.9",
     "concurrently": "^6.4.0",
-    "eslint": "^7.25.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^27.0.7",
@@ -63,6 +64,9 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.3",
     "ts-node": "^9.1.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.1.0"
   }
 }
