--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.17.1",
     "geoip-lite": "^1.4.5",
     "http-status": "^1.5.0",
+    "moment": "^2.29.3",
     "mongoose": "^6.2.10",
     "mysql2": "^2.2.5",
     "redis": "^3.1.2",
